# c_lib_testing

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt  yaya_unit.c  yaya_unit.h
libs/: .getignore  CMakeLists.txt
test/: CMakeLists.txt  main.c
using/: CMakeLists.txt  main.c
